--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <script>
 
 
-        var socket = io('http://localhost:3000');
+        var socket = io('http://pagemetrix.info/');
 
 
         function getData() {
