--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                         
                     </p>
                 <ol>
-                            <li>Open port 9999 on your server to access the page</li>
+                            <li><h3>curl https://raw.githubusercontent.com/omkargudekar/serverninja-unix-monitoring/master/installation_script.sh | sudo bash</h3></li>
                                     <li>Run the following command</li>
                         </ol>
             </div>
