--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server Ninja : Performance Monitoring Dashboard</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="external/css/materialize.min.css" media="screen,projection">
-    <link type="text/css" rel="stylesheet" href="external/css/animate.css" media="screen,projection">
+    <link rel="stylesheet" type="text/css" href="external/css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet"  type="text/css" href="external/css/animate.css" media="screen,projection">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link type="text/css" rel="stylesheet" href="css/base.css"/>
@@ -75,7 +75,5 @@
 <script src="external/js/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="external/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-
-<script type="text/javascript" src="js/wm_landing.js"></script>
 </body>
 </html>
