--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -22,7 +22,7 @@
 
     <div class="tab-container center-align row">
         <a href="#" class="brand-logo"><img
-                src="img/ninja-icon.png" alt="Server Ninja Icon"> <h5>Server Ninja</h5></a>
+                src="img/ninja-icon.png" alt="Server Ninja Icon" title="Server Ninja Icon"> <h5>Server Ninja</h5></a>
 
         <div class="tab-button-wrapper">
             <a id="system-tab" href="#!" class="btn">System Info</a>
@@ -205,9 +205,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <script type="text/javascript"
         src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization','version':'1.1','packages':['table']}]}"></script>
-
-<script src="//cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
-
 
 <script type="text/javascript" src="js/theme.js"></script>
 <script type="text/javascript" src="js/wm_app.js"></script>
