--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <nav class="menu m12 col">
         <div class="nav-wrapper">
 
-            <a href="#" class="brand-logo">Server Ninja</a>
+            <h1 class="brand-logo">Server Ninja</a>
         </div>
     </nav>
 
@@ -28,7 +28,7 @@
 
     <div class="row">
         <div class="info-wrapper center-align">
-            <img src="img/ninja-icon.png" alt="Server Ninja Icon">
+            <img src="img/ninja-icon.png" alt="Server Ninja Icon" title="Server Ninja Icon">
 
             <h2> Real-time server monitoring</h2>
 
