--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="description" content="Server Ninja : Perfomrance Monitoring Dashboard">
+    
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="keywords" content="Unix, Performance, Monitoring, Server Ninja, ServerNinja, server-ninja, performance monitor dashboard, dashboard">
     <meta name="author" content="Omkar Gudekar,Harsh Malewar, Sagar Bendale, Siddharth Warng">
+    <link rel="canonical" href="http://serverninja.info" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Server Ninja - Real time server monitoring" />
+    <meta property="og:description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard si populated with highcharts visualizations" />
+    <meta property="og:url" content="http://serverninja.info" />
+    <meta property="og:site_name" content="Server Ninja" />
+    <meta property="og:image" content="img/ninja-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server Ninja : Performance Monitoring Dashboard</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -32,7 +40,7 @@
 
             <h2> Real-time server monitoring</h2>
 
-            <p class="sub-text">A modern responsive dashboard to monitor your server resources in real-time with visualizations</p>
+            <p class="sub-text">Server Ninja is a modern responsive dashboard to monitor your server resources in real-time with visualizations</p>
             <a class="waves-effect waves-light btn-large large-button" href="dashboard.html"><i class="material-icons">play_arrow</i> Live demo</a>
         </div>
 
