fixed jquery ui cdn

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -196,7 +196,7 @@
 <!--Import jQuery before materialize.js-->
 <script src="external/js/jquery-2.1.4.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/i18n/jquery-ui-i18n.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script type="text/javascript" src="external/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/4.1.9.1/highcharts.js"></script>
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
