--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -52,27 +52,27 @@
                         <div class="input-field col s6">
                             <i class="material-icons prefix">view_carousel</i>
                             <span id="os"></span>
-                            <label for="os" class="active">Operating System</label>
+                            <span for="os" class="active">Operating System</span>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">language</i>
                             <span id="host"></span>
-                            <label for="host" class="active">Host Name</label>
+                            <span for="host" class="active">Host Name</span>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">swap_vertical_circle</i>
                             <span id="uptime"></span>
-                            <label for="uptime" class="active">Server Uptime</label>
+                            <span for="uptime" class="active">Server Uptime</span>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">query_builder</i>
                             <span id="servertime"></span>
-                            <label for="servertime" class="active">Server Timestamp</label>
+                            <span for="servertime" class="active">Server Timestamp</span>
                         </div>
                         <div class="input-field col s6">
                             <i class="material-icons prefix">account_circle</i>
                             <span id="ipaddress"></span>
-                            <label for="ipaddress" class="active">IP Address</label>
+                            <span for="ipaddress" class="active">IP Address</span>
                         </div>
                     </div>
                 </div>
