--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="keywords" content="Unix, Performance, Monitoring, Server Ninja, ServerNinja, server-ninja, performance monitor dashboard, dashboard">
-    <meta name="author" content="Omkar Gudekar,Harsh Malewar, Sagar Bendale, Siddharth Warng">
-    <link rel="canonical" href="http://serverninja.info" />
+    <meta name="og:keywords" content="Unix, Performance, Monitoring, Server Ninja, ServerNinja, server-ninja, performance monitor dashboard, dashboard">
+    <meta name="og:author" content="Omkar Gudekar,Harsh Malewar, Sagar Bendale, Siddharth Warng">
+    <link rel="canonical" href="http://serverninja.info/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Server Ninja - Real time server monitoring" />
-    <meta property="og:description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard si populated with highcharts visualizations" />
+    <meta property="og:description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard is populated with highcharts visualizations" />
     <meta property="og:url" content="http://serverninja.info" />
     <meta property="og:site_name" content="Server Ninja" />
     <meta property="og:image" content="img/ninja-icon.png" />
