--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Server Ninja - Real time server monitoring" />
     <meta property="og:description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard is populated with highcharts visualizations" />
+    <meta property="description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard is populated with highcharts visualizations" />
     <meta property="og:url" content="http://serverninja.info" />
     <meta property="og:site_name" content="Server Ninja" />
     <meta property="og:image" content="img/ninja-icon.png" />
@@ -58,7 +59,7 @@
 
 
         <div class="info-wrapper center-align">
-            <h4>Team UI Ninjas</h4>
+            <h2>Team UI Ninjas</h2>
             <ol>
                 <li>Omkar Gudekar</li>
                 <li>Sagar Bednale</li>
