Added google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Server Ninja - Real time server monitoring" />
     <meta property="og:description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard is populated with highcharts visualizations" />
-    <meta property="description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard is populated with highcharts visualizations" />
+    <meta property="description" content="Server ninja is a real-time performance monitoring dashboard." />
     <meta property="og:url" content="http://serverninja.info" />
     <meta property="og:site_name" content="Server Ninja" />
     <meta property="og:image" content="img/ninja-icon.png" />
@@ -81,5 +81,15 @@
 <script src="external/js/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="external/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-70976307-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
