--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Server Ninja - Real time server monitoring" />
     <meta property="og:description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard is populated with highcharts visualizations" />
-    <meta property="Description" content="Server ninja is a real-time performance monitoring dashboard." />
+    <meta name="description" content="Server ninja is a real-time performance monitoring dashboard." />
     <meta property="og:url" content="http://serverninja.info" />
     <meta property="og:site_name" content="Server Ninja" />
     <meta property="og:image" content="img/ninja-icon.png" />
