--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,16 @@
 <html>
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="og:keywords" content="Unix, Performance, Monitoring, Server Ninja, ServerNinja, server-ninja, performance monitor dashboard, dashboard">
-    <meta name="og:author" content="Omkar Gudekar,Harsh Malewar, Sagar Bendale, Siddharth Warng">
+    <meta property="og:keywords" content="Server, Unix, Performance, Monitoring, Server Ninja, ServerNinja, server-ninja, performance monitor dashboard, dashboard">
+    <meta property="og:author" content="Omkar Gudekar,Harsh Malewar, Sagar Bendale, Siddharth Warng">
+    <meta name="description" content="Server ninja is a real-time performance monitoring dashboard. Dashboard are visualized in real-time with HighchartsJS. Sort and organize charts as you want." />
+    <meta name="keywords" content="Server, Unix, Performance, Monitoring, Server Ninja, ServerNinja, server-ninja, performance monitor dashboard, dashboard" />
+    <meta name="author" content="Omkar Gudekar,Harsh Malewar, Sagar Bendale, Siddharth Warang" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Server Ninja - Real time server monitoring" />
-    <meta property="og:description" content="Server ninja is a real-time performance monitoring dashboard. The dashbard is populated with highcharts visualizations" />
-    <meta name="description" content="Server ninja is a real-time performance monitoring dashboard." />
+    <meta property="og:description" content="Server ninja is a real-time performance monitoring dashboard. Dashboard are visualized in real-time with HighchartsJS. Sort and organize charts as you want." />
+    
     <meta property="og:url" content="http://serverninja.info" />
     <meta property="og:site_name" content="Server Ninja" />
     <meta property="og:image" content="img/ninja-icon.png" />
