--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta property="og:site_name" content="Server Ninja" />
     <meta property="og:image" content="img/ninja-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="http://serverninja.info/" />
     <title>Server Ninja : Performance Monitoring Dashboard</title>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css" media="screen,projection">
