--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -87,6 +87,18 @@
             </div>
         </div>
     </div>
+    <div class="row wow bounceInUp">
+        <div class="col s12 m12 l12 wow fadeInLeft network-div">
+            <div class="card-panel blue-grey lighten-5">
+                <div class="heading">Cpu Usage Over Time</div>
+                <div class="body">
+                    <div id="cpuSpline">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row drop">
         <div class="col s12 m4 l4 wow fadeInLeft network-div">
             <div class="card-panel blue-grey lighten-5">
