--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                 
                 <li>2. Run the following command</li>
                 
-                <li><code>curl https://raw.githubusercontent.com/omkargudekar/serverninja-unix-monitoring/master/installation_script.sh | sudo bash</code></li>
+                <li><code>curl https://www.serverninja.info/installation_script.sh | sudo bash</code></li>
 
             </ol>
         </div>
